feat: support draft export

--- a/.env-sample
+++ b/.env-sample
@@ -1,3 +1,4 @@
 API_ENDPOINT="https://yourendpoint.microcms.io/api/v1/example/"
 LIMIT=10
 X_API_KEY="aaaaaa-aaa-aaaa-aaaa-aaaaaaaaaa"
+X_GLOBAL_DRAFT_KEY="aaa-aaaa-aaaa-aaaa"
